🐛Fix: #51 요청 값이 JSON이 아닐 경우, 오류 처리 추가